--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,7 @@ $dark: #333;
 	max-width: 1140px;
 	margin: 0 auto;
 	padding: 0 15px;
-	border: 1px solid red;
+	// border: 1px solid red;
 }
 
 body {
